# ml-sharp

./: .gitignore  README.md  pyproject.toml
packaging/windows/: README.md  build-gpu-gui.ps1  build-gpu-usdz-gui.ps1  build-photo-to-viewer-gui.ps1  build-splat-viewer-gui.ps1  sharp-gui.spec  sharp-photo-to-viewer-gui.spec  sharp-splat-viewer-gui.spec  sharp-usdz-gui.spec  sharp_gui_entry.py  sharp_photo_to_viewer_gui_entry.py  sharp_splat_viewer_gui_entry.py  sharp_usdz_gui_entry.py
src/sharp/: gui.py  photo_to_viewer_gui.py  splat_viewer_gui.py  usdz_gui.py
src/sharp/cli/: __init__.py  mesh.py  photo_to_viewer.py  predict.py  render.py  usdz.py
src/sharp/utils/: camera.py  gaussians.py  gsplat.py  io.py  meshing.py  net.py  usdz.py
